--- a/style.css
+++ b/style.css
@@ -204,9 +204,41 @@ body {
 }
 .top-left-box {
     border:2px solid white;
-    width:400px;
-    height:300px;
+    background-color: ;
+    width:450px;
+    height:320px;
     position:relative;
-    left:20%;
-    bottom:20px;
+    left:12%;
+    bottom:-23px;
 }
+
+.first-arrow-head {
+    height:1px;
+    border: 7px solid#040313;
+    border-left: 7px solid white;
+    position:absolute;
+    left: 101.2%;
+    top:10%;
+    scale: 1.6;
+    
+}
+
+
+.first-work-heading {
+    font-size:1.5rem;
+    margin-bottom: 1px;
+    margin-left:26px;
+}
+.first-work-company {
+    font-size: 1rem;
+    opacity:0.6;
+    margin-top: 1px;
+    margin-left:26px;
+}
+.first-work-lists {
+    font-size: 0.9rem;
+    opacity:0.8;
+    margin-right:12px;
+}
+
+
